parser.out
Grammar:

Rule 0     S' -> prog
Rule 1     prog -> decl_list
Rule 2     decl_list -> decl decl_list
Rule 3     decl_list -> empty
Rule 4     decl -> decl_init
Rule 5     decl -> ID : type_func ;
Rule 6     decl -> ID : type_array_sized ;
Rule 7     decl -> ID : type_simple ;
Rule 8     decl_init -> ID : type_func = { opt_stmt_list }
Rule 9     decl_init -> ID : type_array_sized = { opt_expr_list } ;
Rule 10    decl_init -> ID : type_simple = expr ;
Rule 11    opt_stmt_list -> stmt_list
Rule 12    opt_stmt_list -> empty
Rule 13    stmt_list -> stmt stmt_list
Rule 14    stmt_list -> stmt
Rule 15    stmt -> closed_stmt
Rule 16    stmt -> open_stmt
Rule 17    closed_stmt -> simple_stmt
Rule 18    closed_stmt -> for_stmt_closed
Rule 19    closed_stmt -> if_stmt_closed
Rule 20    open_stmt -> for_stmt_open
Rule 21    open_stmt -> if_stmt_open
Rule 22    if_cond -> IF ( opt_expr )
Rule 23    if_stmt_closed -> if_cond closed_stmt ELSE closed_stmt
Rule 24    if_stmt_open -> if_cond closed_stmt ELSE if_stmt_open
Rule 25    if_stmt_open -> if_cond stmt
Rule 26    for_header -> FOR ( opt_expr ; opt_expr ; opt_expr )
Rule 27    for_stmt_open -> for_header open_stmt
Rule 28    for_stmt_closed -> for_header closed_stmt
Rule 29    simple_stmt -> dowhile_stmt
Rule 30    simple_stmt -> while_stmt
Rule 31    simple_stmt -> expr ;
Rule 32    simple_stmt -> decl
Rule 33    simple_stmt -> block_stmt
Rule 34    simple_stmt -> return_stmt
Rule 35    simple_stmt -> print_stmt
Rule 36    while_stmt -> WHILE ( expr ) stmt
Rule 37    dowhile_stmt -> DO stmt WHILE ( expr ) ;
Rule 38    print_stmt -> PRINT opt_expr_list ;
Rule 39    return_stmt -> RETURN opt_expr ;
Rule 40    block_stmt -> { stmt_list }
Rule 41    opt_expr_list -> expr_list
Rule 42    opt_expr_list -> empty
Rule 43    expr_list -> expr , expr_list
Rule 44    expr_list -> expr
Rule 45    opt_expr -> expr
Rule 46    opt_expr -> empty
Rule 47    expr -> expr1
Rule 48    expr1 -> expr2
Rule 49    expr1 -> lval = expr1  [precedence=right, level=1]
Rule 50    lval -> ID index
Rule 51    lval -> ID
Rule 52    expr2 -> expr3
Rule 53    expr2 -> expr2 LOR expr3  [precedence=left, level=2]
Rule 54    expr3 -> expr4
Rule 55    expr3 -> expr3 LAND expr4  [precedence=left, level=3]
Rule 56    expr4 -> expr5
Rule 57    expr4 -> expr4 GE expr5  [precedence=left, level=4]
Rule 58    expr4 -> expr4 > expr5  [precedence=left, level=4]
Rule 59    expr4 -> expr4 LE expr5  [precedence=left, level=4]
Rule 60    expr4 -> expr4 < expr5  [precedence=left, level=4]
Rule 61    expr4 -> expr4 NE expr5  [precedence=left, level=4]
Rule 62    expr4 -> expr4 EQ expr5  [precedence=left, level=4]
Rule 63    expr5 -> expr6
Rule 64    expr5 -> expr5 - expr6  [precedence=left, level=5]
Rule 65    expr5 -> expr5 + expr6  [precedence=left, level=5]
Rule 66    expr6 -> expr7
Rule 67    expr6 -> expr6 % expr7  [precedence=left, level=6]
Rule 68    expr6 -> expr6 / expr7  [precedence=left, level=6]
Rule 69    expr6 -> expr6 * expr7  [precedence=left, level=6]
Rule 70    expr7 -> expr8
Rule 71    expr7 -> expr7 ^ expr8  [precedence=right, level=7]
Rule 72    expr8 -> expr9
Rule 73    expr8 -> NOT expr8  [precedence=right, level=8]
Rule 74    expr8 -> - expr8  [precedence=right, level=8]
Rule 75    expr9 -> group
Rule 76    expr9 -> expr9 DEC  [precedence=left, level=9]
Rule 77    expr9 -> expr9 INC  [precedence=left, level=9]
Rule 78    group -> factor
Rule 79    group -> ID index
Rule 80    group -> ID ( opt_expr_list )
Rule 81    group -> ( expr )
Rule 82    index -> [ expr ]
Rule 83    factor -> FALSE
Rule 84    factor -> TRUE
Rule 85    factor -> STRING_LIT
Rule 86    factor -> CHAR_LIT
Rule 87    factor -> INT_LIT
Rule 88    factor -> FLOAT_LIT
Rule 89    factor -> ID
Rule 90    type_simple -> VOID
Rule 91    type_simple -> STRING
Rule 92    type_simple -> CHAR
Rule 93    type_simple -> BOOLEAN
Rule 94    type_simple -> FLOAT
Rule 95    type_simple -> INTEGER
Rule 96    type_array -> ARRAY [ ] type_array
Rule 97    type_array -> ARRAY [ ] type_simple
Rule 98    type_array_sized -> ARRAY index type_array_sized
Rule 99    type_array_sized -> ARRAY index type_simple
Rule 100   type_func -> FUNCTION type_array_sized ( opt_param_list )
Rule 101   type_func -> FUNCTION type_simple ( opt_param_list )
Rule 102   opt_param_list -> param_list
Rule 103   opt_param_list -> empty
Rule 104   param_list -> param_list , param
Rule 105   param_list -> param
Rule 106   param -> ID : type_array_sized
Rule 107   param -> ID : type_array
Rule 108   param -> ID : type_simple
Rule 109   empty -> <empty>

Unused terminals:

    AUTO

Terminals, with rules where they appear:

%                    : 67
(                    : 22 26 36 37 80 81 100 101
)                    : 22 26 36 37 80 81 100 101
*                    : 69
+                    : 65
,                    : 43 104
-                    : 64 74
/                    : 68
:                    : 5 6 7 8 9 10 106 107 108
;                    : 5 6 7 9 10 26 26 31 37 38 39
<                    : 60
=                    : 8 9 10 49
>                    : 58
ARRAY                : 96 97 98 99
AUTO                 : 
BOOLEAN              : 93
CHAR                 : 92
CHAR_LIT             : 86
DEC                  : 76
DO                   : 37
ELSE                 : 23 24
EQ                   : 62
FALSE                : 83
FLOAT                : 94
FLOAT_LIT            : 88
FOR                  : 26
FUNCTION             : 100 101
GE                   : 57
ID                   : 5 6 7 8 9 10 50 51 79 80 89 106 107 108
IF                   : 22
INC                  : 77
INTEGER              : 95
INT_LIT              : 87
LAND                 : 55
LE                   : 59
LOR                  : 53
NE                   : 61
NOT                  : 73
PRINT                : 38
RETURN               : 39
STRING               : 91
STRING_LIT           : 85
TRUE                 : 84
VOID                 : 90
WHILE                : 36 37
[                    : 82 96 97
]                    : 82 96 97
^                    : 71
error                : 
{                    : 8 9 40
}                    : 8 9 40

Nonterminals, with rules where they appear:

block_stmt           : 33
closed_stmt          : 15 23 23 24 28
decl                 : 2 32
decl_init            : 4
decl_list            : 1 2
dowhile_stmt         : 29
empty                : 3 12 42 46 103
expr                 : 10 31 36 37 43 44 45 81 82
expr1                : 47 49
expr2                : 48 53
expr3                : 52 53 55
expr4                : 54 55 57 58 59 60 61 62
expr5                : 56 57 58 59 60 61 62 64 65
expr6                : 63 64 65 67 68 69
expr7                : 66 67 68 69 71
expr8                : 70 71 73 74
expr9                : 72 76 77
expr_list            : 41 43
factor               : 78
for_header           : 27 28
for_stmt_closed      : 18
for_stmt_open        : 20
group                : 75
if_cond              : 23 24 25
if_stmt_closed       : 19
if_stmt_open         : 21 24
index                : 50 79 98 99
lval                 : 49
open_stmt            : 16 27
opt_expr             : 22 26 26 26 39
opt_expr_list        : 9 38 80
opt_param_list       : 100 101
opt_stmt_list        : 8
param                : 104 105
param_list           : 102 104
print_stmt           : 35
prog                 : 0
return_stmt          : 34
simple_stmt          : 17
stmt                 : 13 14 25 36 37
stmt_list            : 11 13 40
type_array           : 96 107
type_array_sized     : 6 9 98 100 106
type_func            : 5 8
type_simple          : 7 10 97 99 101 108
while_stmt           : 30


state 0

    (0) S' -> . prog
    (1) prog -> . decl_list
    (2) decl_list -> . decl decl_list
    (3) decl_list -> . empty
    (4) decl -> . decl_init
    (5) decl -> . ID : type_func ;
    (6) decl -> . ID : type_array_sized ;
    (7) decl -> . ID : type_simple ;
    (109) empty -> .
    (8) decl_init -> . ID : type_func = { opt_stmt_list }
    (9) decl_init -> . ID : type_array_sized = { opt_expr_list } ;
    (10) decl_init -> . ID : type_simple = expr ;
    ID              shift and go to state 6
    $end            reduce using rule 109 (empty -> .)

    prog                           shift and go to state 1
    decl_list                      shift and go to state 2
    decl                           shift and go to state 3
    empty                          shift and go to state 4
    decl_init                      shift and go to state 5

state 1

    (0) S' -> prog .


state 2

    (1) prog -> decl_list .
    $end            reduce using rule 1 (prog -> decl_list .)


state 3

    (2) decl_list -> decl . decl_list
    (2) decl_list -> . decl decl_list
    (3) decl_list -> . empty
    (4) decl -> . decl_init
    (5) decl -> . ID : type_func ;
    (6) decl -> . ID : type_array_sized ;
    (7) decl -> . ID : type_simple ;
    (109) empty -> .
    (8) decl_init -> . ID : type_func = { opt_stmt_list }
    (9) decl_init -> . ID : type_array_sized = { opt_expr_list } ;
    (10) decl_init -> . ID : type_simple = expr ;
    ID              shift and go to state 6
    $end            reduce using rule 109 (empty -> .)

    decl                           shift and go to state 3
    decl_list                      shift and go to state 7
    empty                          shift and go to state 4
    decl_init                      shift and go to state 5

state 4

    (3) decl_list -> empty .
    $end            reduce using rule 3 (decl_list -> empty .)


state 5

    (4) decl -> decl_init .
    ID              reduce using rule 4 (decl -> decl_init .)
    $end            reduce using rule 4 (decl -> decl_init .)
    DO              reduce using rule 4 (decl -> decl_init .)
    WHILE           reduce using rule 4 (decl -> decl_init .)
    {               reduce using rule 4 (decl -> decl_init .)
    RETURN          reduce using rule 4 (decl -> decl_init .)
    PRINT           reduce using rule 4 (decl -> decl_init .)
    FOR             reduce using rule 4 (decl -> decl_init .)
    IF              reduce using rule 4 (decl -> decl_init .)
    NOT             reduce using rule 4 (decl -> decl_init .)
    -               reduce using rule 4 (decl -> decl_init .)
    (               reduce using rule 4 (decl -> decl_init .)
    FALSE           reduce using rule 4 (decl -> decl_init .)
    TRUE            reduce using rule 4 (decl -> decl_init .)
    STRING_LIT      reduce using rule 4 (decl -> decl_init .)
    CHAR_LIT        reduce using rule 4 (decl -> decl_init .)
    INT_LIT         reduce using rule 4 (decl -> decl_init .)
    FLOAT_LIT       reduce using rule 4 (decl -> decl_init .)
    }               reduce using rule 4 (decl -> decl_init .)
    ELSE            reduce using rule 4 (decl -> decl_init .)


state 6

    (5) decl -> ID . : type_func ;
    (6) decl -> ID . : type_array_sized ;
    (7) decl -> ID . : type_simple ;
    (8) decl_init -> ID . : type_func = { opt_stmt_list }
    (9) decl_init -> ID . : type_array_sized = { opt_expr_list } ;
    (10) decl_init -> ID . : type_simple = expr ;
    :               shift and go to state 8


state 7

    (2) decl_list -> decl decl_list .
    $end            reduce using rule 2 (decl_list -> decl decl_list .)


state 8

    (5) decl -> ID : . type_func ;
    (6) decl -> ID : . type_array_sized ;
    (7) decl -> ID : . type_simple ;
    (8) decl_init -> ID : . type_func = { opt_stmt_list }
    (9) decl_init -> ID : . type_array_sized = { opt_expr_list } ;
    (10) decl_init -> ID : . type_simple = expr ;
    (100) type_func -> . FUNCTION type_array_sized ( opt_param_list )
    (101) type_func -> . FUNCTION type_simple ( opt_param_list )
    (98) type_array_sized -> . ARRAY index type_array_sized
    (99) type_array_sized -> . ARRAY index type_simple
    (90) type_simple -> . VOID
    (91) type_simple -> . STRING
    (92) type_simple -> . CHAR
    (93) type_simple -> . BOOLEAN
    (94) type_simple -> . FLOAT
    (95) type_simple -> . INTEGER
    FUNCTION        shift and go to state 12
    ARRAY           shift and go to state 13
    VOID            shift and go to state 14
    STRING          shift and go to state 15
    CHAR            shift and go to state 16
    BOOLEAN         shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19

    type_func                      shift and go to state 9
    type_array_sized               shift and go to state 10
    type_simple                    shift and go to state 11

state 9

    (5) decl -> ID : type_func . ;
    (8) decl_init -> ID : type_func . = { opt_stmt_list }
    ;               shift and go to state 20
    =               shift and go to state 21


state 10

    (6) decl -> ID : type_array_sized . ;
    (9) decl_init -> ID : type_array_sized . = { opt_expr_list } ;
    ;               shift and go to state 22
    =               shift and go to state 23


state 11

    (7) decl -> ID : type_simple . ;
    (10) decl_init -> ID : type_simple . = expr ;
    ;               shift and go to state 24
    =               shift and go to state 25


state 12

    (100) type_func -> FUNCTION . type_array_sized ( opt_param_list )
    (101) type_func -> FUNCTION . type_simple ( opt_param_list )
    (98) type_array_sized -> . ARRAY index type_array_sized
    (99) type_array_sized -> . ARRAY index type_simple
    (90) type_simple -> . VOID
    (91) type_simple -> . STRING
    (92) type_simple -> . CHAR
    (93) type_simple -> . BOOLEAN
    (94) type_simple -> . FLOAT
    (95) type_simple -> . INTEGER
    ARRAY           shift and go to state 13
    VOID            shift and go to state 14
    STRING          shift and go to state 15
    CHAR            shift and go to state 16
    BOOLEAN         shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19

    type_array_sized               shift and go to state 26
    type_simple                    shift and go to state 27

state 13

    (98) type_array_sized -> ARRAY . index type_array_sized
    (99) type_array_sized -> ARRAY . index type_simple
    (82) index -> . [ expr ]
    [               shift and go to state 29

    index                          shift and go to state 28

state 14

    (90) type_simple -> VOID .
    ;               reduce using rule 90 (type_simple -> VOID .)
    =               reduce using rule 90 (type_simple -> VOID .)
    (               reduce using rule 90 (type_simple -> VOID .)
    ,               reduce using rule 90 (type_simple -> VOID .)
    )               reduce using rule 90 (type_simple -> VOID .)


state 15

    (91) type_simple -> STRING .
    ;               reduce using rule 91 (type_simple -> STRING .)
    =               reduce using rule 91 (type_simple -> STRING .)
    (               reduce using rule 91 (type_simple -> STRING .)
    ,               reduce using rule 91 (type_simple -> STRING .)
    )               reduce using rule 91 (type_simple -> STRING .)


state 16

    (92) type_simple -> CHAR .
    ;               reduce using rule 92 (type_simple -> CHAR .)
    =               reduce using rule 92 (type_simple -> CHAR .)
    (               reduce using rule 92 (type_simple -> CHAR .)
    ,               reduce using rule 92 (type_simple -> CHAR .)
    )               reduce using rule 92 (type_simple -> CHAR .)


state 17

    (93) type_simple -> BOOLEAN .
    ;               reduce using rule 93 (type_simple -> BOOLEAN .)
    =               reduce using rule 93 (type_simple -> BOOLEAN .)
    (               reduce using rule 93 (type_simple -> BOOLEAN .)
    ,               reduce using rule 93 (type_simple -> BOOLEAN .)
    )               reduce using rule 93 (type_simple -> BOOLEAN .)


state 18

    (94) type_simple -> FLOAT .
    ;               reduce using rule 94 (type_simple -> FLOAT .)
    =               reduce using rule 94 (type_simple -> FLOAT .)
    (               reduce using rule 94 (type_simple -> FLOAT .)
    ,               reduce using rule 94 (type_simple -> FLOAT .)
    )               reduce using rule 94 (type_simple -> FLOAT .)


state 19

    (95) type_simple -> INTEGER .
    ;               reduce using rule 95 (type_simple -> INTEGER .)
    =               reduce using rule 95 (type_simple -> INTEGER .)
    (               reduce using rule 95 (type_simple -> INTEGER .)
    ,               reduce using rule 95 (type_simple -> INTEGER .)
    )               reduce using rule 95 (type_simple -> INTEGER .)


state 20

    (5) decl -> ID : type_func ; .
    ID              reduce using rule 5 (decl -> ID : type_func ; .)
    $end            reduce using rule 5 (decl -> ID : type_func ; .)
    DO              reduce using rule 5 (decl -> ID : type_func ; .)
    WHILE           reduce using rule 5 (decl -> ID : type_func ; .)
    {               reduce using rule 5 (decl -> ID : type_func ; .)
    RETURN          reduce using rule 5 (decl -> ID : type_func ; .)
    PRINT           reduce using rule 5 (decl -> ID : type_func ; .)
    FOR             reduce using rule 5 (decl -> ID : type_func ; .)
    IF              reduce using rule 5 (decl -> ID : type_func ; .)
    NOT             reduce using rule 5 (decl -> ID : type_func ; .)
    -               reduce using rule 5 (decl -> ID : type_func ; .)
    (               reduce using rule 5 (decl -> ID : type_func ; .)
    FALSE           reduce using rule 5 (decl -> ID : type_func ; .)
    TRUE            reduce using rule 5 (decl -> ID : type_func ; .)
    STRING_LIT      reduce using rule 5 (decl -> ID : type_func ; .)
    CHAR_LIT        reduce using rule 5 (decl -> ID : type_func ; .)
    INT_LIT         reduce using rule 5 (decl -> ID : type_func ; .)
    FLOAT_LIT       reduce using rule 5 (decl -> ID : type_func ; .)
    }               reduce using rule 5 (decl -> ID : type_func ; .)
    ELSE            reduce using rule 5 (decl -> ID : type_func ; .)


state 21

    (8) decl_init -> ID : type_func = . { opt_stmt_list }
    {               shift and go to state 30


state 22

    (6) decl -> ID : type_array_sized ; .
    ID              reduce using rule 6 (decl -> ID : type_array_sized ; .)
    $end            reduce using rule 6 (decl -> ID : type_array_sized ; .)
    DO              reduce using rule 6 (decl -> ID : type_array_sized ; .)
    WHILE           reduce using rule 6 (decl -> ID : type_array_sized ; .)
    {               reduce using rule 6 (decl -> ID : type_array_sized ; .)
    RETURN          reduce using rule 6 (decl -> ID : type_array_sized ; .)
    PRINT           reduce using rule 6 (decl -> ID : type_array_sized ; .)
    FOR             reduce using rule 6 (decl -> ID : type_array_sized ; .)
    IF              reduce using rule 6 (decl -> ID : type_array_sized ; .)
    NOT             reduce using rule 6 (decl -> ID : type_array_sized ; .)
    -               reduce using rule 6 (decl -> ID : type_array_sized ; .)
    (               reduce using rule 6 (decl -> ID : type_array_sized ; .)
    FALSE           reduce using rule 6 (decl -> ID : type_array_sized ; .)
    TRUE            reduce using rule 6 (decl -> ID : type_array_sized ; .)
    STRING_LIT      reduce using rule 6 (decl -> ID : type_array_sized ; .)
    CHAR_LIT        reduce using rule 6 (decl -> ID : type_array_sized ; .)
    INT_LIT         reduce using rule 6 (decl -> ID : type_array_sized ; .)
    FLOAT_LIT       reduce using rule 6 (decl -> ID : type_array_sized ; .)
    }               reduce using rule 6 (decl -> ID : type_array_sized ; .)
    ELSE            reduce using rule 6 (decl -> ID : type_array_sized ; .)


state 23

    (9) decl_init -> ID : type_array_sized = . { opt_expr_list } ;
    {               shift and go to state 31


state 24

    (7) decl -> ID : type_simple ; .
    ID              reduce using rule 7 (decl -> ID : type_simple ; .)
    $end            reduce using rule 7 (decl -> ID : type_simple ; .)
    DO              reduce using rule 7 (decl -> ID : type_simple ; .)
    WHILE           reduce using rule 7 (decl -> ID : type_simple ; .)
    {               reduce using rule 7 (decl -> ID : type_simple ; .)
    RETURN          reduce using rule 7 (decl -> ID : type_simple ; .)
    PRINT           reduce using rule 7 (decl -> ID : type_simple ; .)
    FOR             reduce using rule 7 (decl -> ID : type_simple ; .)
    IF              reduce using rule 7 (decl -> ID : type_simple ; .)
    NOT             reduce using rule 7 (decl -> ID : type_simple ; .)
    -               reduce using rule 7 (decl -> ID : type_simple ; .)
    (               reduce using rule 7 (decl -> ID : type_simple ; .)
    FALSE           reduce using rule 7 (decl -> ID : type_simple ; .)
    TRUE            reduce using rule 7 (decl -> ID : type_simple ; .)
    STRING_LIT      reduce using rule 7 (decl -> ID : type_simple ; .)
    CHAR_LIT        reduce using rule 7 (decl -> ID : type_simple ; .)
    INT_LIT         reduce using rule 7 (decl -> ID : type_simple ; .)
    FLOAT_LIT       reduce using rule 7 (decl -> ID : type_simple ; .)
    }               reduce using rule 7 (decl -> ID : type_simple ; .)
    ELSE            reduce using rule 7 (decl -> ID : type_simple ; .)


state 25

    (10) decl_init -> ID : type_simple = . expr ;
    (47) expr -> . expr1
    (48) expr1 -> . expr2
    (49) expr1 -> . lval = expr1
    (52) expr2 -> . expr3
    (53) expr2 -> . expr2 LOR expr3
    (50) lval -> . ID index
    (51) lval -> . ID
    (54) expr3 -> . expr4
    (55) expr3 -> . expr3 LAND expr4
    (56) expr4 -> . expr5
    (57) expr4 -> . expr4 GE expr5
    (58) expr4 -> . expr4 > expr5
    (59) expr4 -> . expr4 LE expr5
    (60) expr4 -> . expr4 < expr5
    (61) expr4 -> . expr4 NE expr5
    (62) expr4 -> . expr4 EQ expr5
    (63) expr5 -> . expr6
    (64) expr5 -> . expr5 - expr6
    (65) expr5 -> . expr5 + expr6
    (66) expr6 -> . expr7
    (67) expr6 -> . expr6 % expr7
    (68) expr6 -> . expr6 / expr7
    (69) expr6 -> . expr6 * expr7
    (70) expr7 -> . expr8
    (71) expr7 -> . expr7 ^ expr8
    (72) expr8 -> . expr9
    (73) expr8 -> . NOT expr8
    (74) expr8 -> . - expr8
    (75) expr9 -> . group
    (76) expr9 -> . expr9 DEC
    (77) expr9 -> . expr9 INC
    (78) group -> . factor
    (79) group -> . ID index
    (80) group -> . ID ( opt_expr_list )
    (81) group -> . ( expr )
    (83) factor -> . FALSE
    (84) factor -> . TRUE
    (85) factor -> . STRING_LIT
    (86) factor -> . CHAR_LIT
    (87) factor -> . INT_LIT
    (88) factor -> . FLOAT_LIT
    (89) factor -> . ID
    ID              shift and go to state 32
    NOT             shift and go to state 45
    -               shift and go to state 41
    (               shift and go to state 48
    FALSE           shift and go to state 49
    TRUE            shift and go to state 50
    STRING_LIT      shift and go to state 51
    CHAR_LIT        shift and go to state 52
    INT_LIT         shift and go to state 53
    FLOAT_LIT       shift and go to state 54

    expr                           shift and go to state 33
    expr1                          shift and go to state 34
    expr2                          shift and go to state 35
    lval                           shift and go to state 36
    expr3                          shift and go to state 37
    expr4                          shift and go to state 38
    expr5                          shift and go to state 39
    expr6                          shift and go to state 40
    expr7                          shift and go to state 42
    expr8                          shift and go to state 43
    expr9                          shift and go to state 44
    group                          shift and go to state 46
    factor                         shift and go to state 47

state 26

    (100) type_func -> FUNCTION type_array_sized . ( opt_param_list )
    (               shift and go to state 55


state 27

    (101) type_func -> FUNCTION type_simple . ( opt_param_list )
    (               shift and go to state 56


state 28

    (98) type_array_sized -> ARRAY index . type_array_sized
    (99) type_array_sized -> ARRAY index . type_simple
    (98) type_array_sized -> . ARRAY index type_array_sized
    (99) type_array_sized -> . ARRAY index type_simple
    (90) type_simple -> . VOID
    (91) type_simple -> . STRING
    (92) type_simple -> . CHAR
    (93) type_simple -> . BOOLEAN
    (94) type_simple -> . FLOAT
    (95) type_simple -> . INTEGER
    ARRAY           shift and go to state 13
    VOID            shift and go to state 14
    STRING          shift and go to state 15
    CHAR            shift and go to state 16
    BOOLEAN         shift and go to state 17
    FLOAT           shift and go to state 18
    INTEGER         shift and go to state 19

    type_array_sized               shift and go to state 57
    type_simple                    shift and go to state 58

state 29

    (82) index -> [ . expr ]
    (47) expr -> . expr1
    (48) expr1 -> . expr2
    (49) expr1 -> . lval = expr1
    (52) expr2 -> . expr3
    (53) expr2 -> . expr2 LOR expr3
    (50) lval -> . ID index
    (51) lval -> . ID
    (54) expr3 -> . expr4
    (55) expr3 -> . expr3 LAND expr4
    (56) expr4 -> . expr5
    (57) expr4 -> . expr4 GE expr5
    (58) expr4 -> . expr4 > expr5
    (59) expr4 -> . expr4 LE expr5
    (60) expr4 -> . expr4 < expr5
    (61) expr4 -> . expr4 NE expr5
    (62) expr4 -> . expr4 EQ expr5
    (63) expr5 -> . expr6
    (64) expr5 -> . expr5 - expr6
    (65) expr5 -> . expr5 + expr6
    (66) expr6 -> . expr7
    (67) expr6 -> . expr6 % expr7
    (68) expr6 -> . expr6 / expr7
    (69) expr6 -> . expr6 * expr7
    (70) expr7 -> . expr8
    (71) expr7 -> . expr7 ^ expr8
    (72) expr8 -> . expr9
    (73) expr8 -> . NOT expr8
    (74) expr8 -> . - expr8
    (75) expr9 -> . group
    (76) expr9 -> . expr9 DEC
    (77) expr9 -> . expr9 INC
    (78) group -> . factor
    (79) group -> . ID index
    (80) group -> . ID ( opt_expr_list )
    (81) group -> . ( expr )
    (83) factor -> . FALSE
    (84) factor -> . TRUE
    (85) factor -> . STRING_LIT
    (86) factor -> . CHAR_LIT
    (87) factor -> . INT_LIT
    (88) factor -> . FLOAT_LIT
    (89) factor -> . ID
    ID              shift and go to state 32
    NOT             shift and go to state 45
    -               shift and go to state 41
    (               shift and go to state 48
    FALSE           shift and go to state 49
    TRUE            shift and go to state 50
    STRING_LIT      shift and go to state 51
    CHAR_LIT        shift and go to state 52
    INT_LIT         shift and go to state 53
    FLOAT_LIT       shift and go to state 54

    expr                           shift and go to state 59
    expr1                          shift and go to state 34
    expr2                          shift and go to state 35
    lval                           shift and go to state 36
    expr3                          shift and go to state 37
    expr4                          shift and go to state 38
    expr5                          shift and go to state 39
    expr6                          shift and go to state 40
    expr7                          shift and go to state 42
    expr8                          shift and go to state 43
    expr9                          shift and go to state 44
    group                          shift and go to state 46
    factor                         shift and go to state 47

state 30

    (8) decl_init -> ID : type_func = { . opt_stmt_list }
    (11) opt_stmt_list -> . stmt_list
    (12) opt_stmt_list -> . empty
    (13) stmt_list -> . stmt stmt_list
    (14) stmt_list -> . stmt
    (109) empty -> .
    (15) stmt -> . closed_stmt
    (16) stmt -> . open_stmt
    (17) closed_stmt -> . simple_stmt
    (18) closed_stmt -> . for_stmt_closed
    (19) closed_stmt -> . if_stmt_closed
    (20) open_stmt -> . for_stmt_open
    (21) open_stmt -> . if_stmt_open
    (29) simple_stmt -> . dowhile_stmt
    (30) simple_stmt -> . while_stmt
    (31) simple_stmt -> . expr ;
    (32) simple_stmt -> . decl
    (33) simple_stmt -> . block_stmt
    (34) simple_stmt -> . return_stmt
    (35) simple_stmt -> . print_stmt
    (28) for_stmt_closed -> . for_header closed_stmt
    (23) if_stmt_closed -> . if_cond closed_stmt ELSE closed_stmt
    (27) for_stmt_open -> . for_header open_stmt
    (24) if_stmt_open -> . if_cond closed_stmt ELSE if_stmt_open
    (25) if_stmt_open -> . if_cond stmt
    (37) dowhile_stmt -> . DO stmt WHILE ( expr ) ;
    (36) while_stmt -> . WHILE ( expr ) stmt
    (47) expr -> . expr1
    (4) decl -> . decl_init
    (5) decl -> . ID : type_func ;
    (6) decl -> . ID : type_array_sized ;
    (7) decl -> . ID : type_simple ;
    (40) block_stmt -> . { stmt_list }
    (39) return_stmt -> . RETURN opt_expr ;
    (38) print_stmt -> . PRINT opt_expr_list ;
    (26) for_header -> . FOR ( opt_expr ; opt_expr ; opt_expr )
    (22) if_cond -> . IF ( opt_expr )
    (48) expr1 -> . expr2
    (49) expr1 -> . lval = expr1
    (8) decl_init -> . ID : type_func = { opt_stmt_list }
    (9) decl_init -> . ID : type_array_sized = { opt_expr_list } ;
    (10) decl_init -> . ID : type_simple = expr ;
    (52) expr2 -> . expr3
    (53) expr2 -> . expr2 LOR expr3
    (50) lval -> . ID index
    (51) lval -> . ID
    (54) expr3 -> . expr4
    (55) expr3 -> . expr3 LAND expr4
    (56) expr4 -> . expr5
    (57) expr4 -> . expr4 GE expr5
    (58) expr4 -> . expr4 > expr5
    (59) expr4 -> . expr4 LE expr5
    (60) expr4 -> . expr4 < expr5
    (61) expr4 -> . expr4 NE expr5
    (62) expr4 -> . expr4 EQ expr5
    (63) expr5 -> . expr6
    (64) expr5 -> . expr5 - expr6
    (65) expr5 -> . expr5 + expr6
    (66) expr6 -> . expr7
    (67) expr6 -> . expr6 % expr7
    (68) expr6 -> . expr6 / expr7
    (69) expr6 -> . expr6 * expr7
    (70) expr7 -> . expr8
    (71) expr7 -> . expr7 ^ expr8
    (72) expr8 -> . expr9
    (73) expr8 -> . NOT expr8
    (74) expr8 -> . - expr8
    (75) expr9 -> . group
    (76) expr9 -> . expr9 DEC
    (77) expr9 -> . expr9 INC
    (78) group -> . factor
    (79) group -> . ID index
    (80) group -> . ID ( opt_expr_list )
    (81) group -> . ( expr )
    (83) factor -> . FALSE
    (84) factor -> . TRUE
    (85) factor -> . STRING_LIT
    (86) factor -> . CHAR_LIT
    (87) factor -> . INT_LIT
    (88) factor -> . FLOAT_LIT
    (89) factor -> . ID
    }               reduce using rule 109 (empty -> .)
    DO              shift and go to state 82
    WHILE           shift and go to state 83
    ID              shift and go to state 60
    {               shift and go to state 61
    RETURN          shift and go to state 84
    PRINT           shift and go to state 85
    FOR             shift and go to state 86
    IF              shift and go to state 87
    NOT             shift and go to state 45
    -               shift and go to state 41
    (               shift and go to state 48
    FALSE           shift and go to state 49
    TRUE            shift and go to state 50
    STRING_LIT      shift and go to state 51
    CHAR_LIT        shift and go to state 52
    INT_LIT         shift and go to state 53
    FLOAT_LIT       shift and go to state 54

    opt_stmt_list                  shift and go to state 62
    stmt_list                      shift and go to state 63
    empty                          shift and go to state 64
    stmt                           shift and go to state 65
    closed_stmt                    shift and go to state 66
    open_stmt                      shift and go to state 67
    simple_stmt                    shift and go to state 68
    for_stmt_closed                shift and go to state 69
    if_stmt_closed                 shift and go to state 70
    for_stmt_open                  shift and go to state 71
    if_stmt_open                   shift and go to state 72
    dowhile_stmt                   shift and go to state 73
    while_stmt                     shift and go to state 74
    expr                           shift and go to state 75
    decl                           shift and go to state 76
    block_stmt                     shift and go to state 77
    return_stmt                    shift and go to state 78
    print_stmt                     shift and go to state 79
    for_header                     shift and go to state 80
    if_cond                        shift and go to state 81
    expr1                          shift and go to state 34
    decl_init                      shift and go to state 5
    expr2                          shift and go to state 35
    lval                           shift and go to state 36
    expr3                          shift and go to state 37
    expr4                          shift and go to state 38
    expr5                          shift and go to state 39
    expr6                          shift and go to state 40
    expr7                          shift and go to state 42
    expr8                          shift and go to state 43
    expr9                          shift and go to state 44
    group                          shift and go to state 46
    factor                         shift and go to state 47

state 31
